Listed building list screens in content block instead of question block

--- a/app/views/manage/questionnaire/v13/constraints/listed-buildings.html
+++ b/app/views/manage/questionnaire/v13/constraints/listed-buildings.html
@@ -13,98 +13,105 @@
   }
 ] %}
 
-{% block questions %}
+{% block content %}
 
-<!-- appeal metadata -->
-<div class="govuk-grid-row govuk-!-margin-bottom-6">
-  <div class="govuk-grid-column-two-thirds">
+  <form method="post">
+    <!-- appeal metadata -->
+    <div class="govuk-grid-row govuk-!-margin-bottom-6">
+      <div class="govuk-grid-column-two-thirds">
 
-    {% if data['extrabuildingsaffected'] %}
-      <h1 class="govuk-heading-l">
-        You have added 2 isted buildings
-      </h1>
-    {% else %}
-      <h1 class="govuk-heading-l">
-        {{ title }}
-      </h1>
-    {% endif %}
+        {% if data['extrabuildingsaffected'] %}
+          <h1 class="govuk-heading-l">
+            You have added 2 isted buildings
+          </h1>
+        {% else %}
+          <h1 class="govuk-heading-l">
+            {{ title }}
+          </h1>
+        {% endif %}
 
-  </div>
+      </div>
 
-  <div class="govuk-grid-column-full">
+      <div class="govuk-grid-column-full">
 
-    {{ govukSummaryList({
-      classes: 'appeal-details govuk-!-margin-bottom-0 govuk-!-margin-top-0',
-      rows: [
+        {{ govukSummaryList({
+          classes: 'appeal-details govuk-!-margin-bottom-0 govuk-!-margin-top-0',
+          rows: [
 
-          {
-            key: {
-              text: 'Listed building',
-              visuallyHiddenText: '138-142, York Road, Bedminster, Bristol, BS3 4AL'
-            },
-            value: {
-              html: (data['historicenglandsearchnumber'] or '1282038')+
-                    '<br>Grade II listed building'+
-                    '<br>138-142, York Road, Bedminster, Bristol, BS3 4AL'
-            },
-            actions: {
-              items: [
-                {
-                  href: "listed-building-details",
-                  text: "Remove",
+              {
+                key: {
+                  text: 'Listed building',
                   visuallyHiddenText: '138-142, York Road, Bedminster, Bristol, BS3 4AL'
+                },
+                value: {
+                  html: (data['historicenglandsearchnumber'] or '1282038')+
+                        '<br>Grade II listed building'+
+                        '<br>138-142, York Road, Bedminster, Bristol, BS3 4AL'
+                },
+                actions: {
+                  items: [
+                    {
+                      href: "listed-building-details",
+                      text: "Remove",
+                      visuallyHiddenText: '138-142, York Road, Bedminster, Bristol, BS3 4AL'
+                    }
+                  ]
                 }
-              ]
-            }
+              },
+              {
+                key: {
+                  text: 'Listed building',
+                  visuallyHiddenText: '144, York Road, Bedminster, Bristol, BS3 4AL'
+                },
+                value: {
+                  html: (data['historicenglandsearchnumber'] or '1282032')+
+                        '<br>Grade II listed building'+
+                        '<br>144, York Road, Bedminster, Bristol, BS3 4AL'
+                },
+                actions: {
+                  items: [
+                    {
+                      href: "?extrabuildings=",
+                      text: "Remove",
+                      visuallyHiddenText: '144, York Road, Bedminster, Bristol, BS3 4AL'
+                    }
+                  ]
+                }
+              } if data['extrabuildings'] == 'yes'
+
+          ]
+        }) }}
+
+      </div>
+    </div>
+
+      {{ govukRadios({
+        idPrefix: 'listed-buildings',
+        name: 'listed-buildings',
+        fieldset: {
+          legend: {
+            html: 'Do you want to add any more listed buildings?',
+            classes: 'govuk-fieldset__legend--m',
+            isPageHeading: false
+          }
+        },
+        items: [
+          {
+            html: 'Yes',
+            value: 'Yes',
+            checked: checked('listed-buildings','Yes')
           },
           {
-            key: {
-              text: 'Listed building',
-              visuallyHiddenText: '144, York Road, Bedminster, Bristol, BS3 4AL'
-            },
-            value: {
-              html: (data['historicenglandsearchnumber'] or '1282032')+
-                    '<br>Grade II listed building'+
-                    '<br>144, York Road, Bedminster, Bristol, BS3 4AL'
-            },
-            actions: {
-              items: [
-                {
-                  href: "?extrabuildings=",
-                  text: "Remove",
-                  visuallyHiddenText: '144, York Road, Bedminster, Bristol, BS3 4AL'
-                }
-              ]
-            }
-          } if data['extrabuildings'] == 'yes'
+            html: 'No',
+            value: 'No',
+            checked: checked('listed-buildings','No')
+          }
+        ]
+      }) }}
 
-      ]
-    }) }}
+      {{ govukButton({
+        html: 'Continue'
+      }) }}
 
-  </div>
-</div>
-
-  {{ govukRadios({
-    idPrefix: 'listed-buildings',
-    name: 'listed-buildings',
-    fieldset: {
-      legend: {
-        html: 'Do you want to add any more listed buildings?',
-        classes: 'govuk-fieldset__legend--m',
-        isPageHeading: false
-      }
-    },
-    items: [
-      {
-        html: 'Yes',
-        value: 'Yes',
-        checked: checked('listed-buildings','Yes')
-      },
-      {
-        html: 'No',
-        value: 'No',
-        checked: checked('listed-buildings','No')
-      }
-    ]
-  }) }}
+  </form>
 {% endblock %}
