--- a/app/views/manage/questionnaire/v13/constraints/affected-listed-buildings.html
+++ b/app/views/manage/questionnaire/v13/constraints/affected-listed-buildings.html
@@ -13,97 +13,106 @@
   }
 ] %}
 
-{% block questions %}
+{% block content %}
 
-<!-- appeal metadata -->
-<div class="govuk-grid-row govuk-!-margin-bottom-6">
-  <div class="govuk-grid-column-two-thirds">
+  <form method="post">
 
-    {% if data['extrabuildingsaffected'] %}
-      <h1 class="govuk-heading-l">
-        You have added 2 affected listed buildings
-      </h1>
-    {% else %}
-      <h1 class="govuk-heading-l">
-        {{ title }}
-      </h1>
-    {% endif %}
+    <!-- appeal metadata -->
+    <div class="govuk-grid-row govuk-!-margin-bottom-6">
+      <div class="govuk-grid-column-two-thirds">
 
-  </div>
-  <div class="govuk-grid-column-full">
+        {% if data['extrabuildingsaffected'] %}
+          <h1 class="govuk-heading-l">
+            You have added 2 affected listed buildings
+          </h1>
+        {% else %}
+          <h1 class="govuk-heading-l">
+            {{ title }}
+          </h1>
+        {% endif %}
 
-    {{ govukSummaryList({
-      classes: 'appeal-details govuk-!-margin-bottom-0 govuk-!-margin-top-0',
-      rows: [
+      </div>
+      <div class="govuk-grid-column-full">
 
-        {
-          key: {
-            text: 'Listed building',
-            visuallyHiddenText: '155, York Road, Bedminster, Bristol, BS3 4AL'
-          },
-          value: {
-            html: (data['historicenglandsearchnumber'] or '1282050')+
-                  '<br>Grade II listed building'+
-                  '<br>155, York Road, Bedminster, Bristol, BS3 4AL'
-          },
-          actions: {
-            items: [
-              {
-                href: "affected-listed-building-details",
-                text: "Remove",
+        {{ govukSummaryList({
+          classes: 'appeal-details govuk-!-margin-bottom-0 govuk-!-margin-top-0',
+          rows: [
+
+            {
+              key: {
+                text: 'Listed building',
                 visuallyHiddenText: '155, York Road, Bedminster, Bristol, BS3 4AL'
+              },
+              value: {
+                html: (data['historicenglandsearchnumber'] or '1282050')+
+                      '<br>Grade II listed building'+
+                      '<br>155, York Road, Bedminster, Bristol, BS3 4AL'
+              },
+              actions: {
+                items: [
+                  {
+                    href: "affected-listed-building-details",
+                    text: "Remove",
+                    visuallyHiddenText: '155, York Road, Bedminster, Bristol, BS3 4AL'
+                  }
+                ]
               }
-            ]
-          }
+            },
+            {
+              key: {
+                text: 'Listed building',
+                visuallyHiddenText: '155, York Road, Bedminster, Bristol, BS3 4AL'
+              },
+              value: {
+                html: (data['historicenglandsearchnumber'] or '1282051')+
+                      '<br>Grade II listed building'+
+                      '<br>156, York Road, Bedminster, Bristol, BS3 4AL'
+              },
+              actions: {
+                items: [
+                  {
+                    href: "?extrabuildingsaffected=",
+                    text: "Remove",
+                    visuallyHiddenText: '156, York Road, Bedminster, Bristol, BS3 4AL'
+                  }
+                ]
+              }
+            } if data['extrabuildingsaffected'] == 'yes'
+
+          ]
+        }) }}
+
+      </div>
+    </div>
+
+    {{ govukRadios({
+      idPrefix: 'affected-listed-buildings',
+      name: 'affected-listed-buildings',
+      fieldset: {
+        legend: {
+          html: 'Do you want to add any more listed buildings?',
+          classes: 'govuk-fieldset__legend--m',
+          isPageHeading: false
+        }
+      },
+      items: [
+        {
+          html: 'Yes',
+          value: 'Yes',
+          checked: checked('affected-listed-buildings','Yes')
         },
         {
-          key: {
-            text: 'Listed building',
-            visuallyHiddenText: '155, York Road, Bedminster, Bristol, BS3 4AL'
-          },
-          value: {
-            html: (data['historicenglandsearchnumber'] or '1282051')+
-                  '<br>Grade II listed building'+
-                  '<br>156, York Road, Bedminster, Bristol, BS3 4AL'
-          },
-          actions: {
-            items: [
-              {
-                href: "?extrabuildingsaffected=",
-                text: "Remove",
-                visuallyHiddenText: '156, York Road, Bedminster, Bristol, BS3 4AL'
-              }
-            ]
-          }
-        } if data['extrabuildingsaffected'] == 'yes'
-
+          html: 'No',
+          value: 'No',
+          checked: checked('affected-listed-buildings','No')
+        }
       ]
     }) }}
 
-  </div>
-</div>
+    {{ govukButton({
+      html: 'Continue'
+    }) }}
 
-  {{ govukRadios({
-    idPrefix: 'affected-listed-buildings',
-    name: 'affected-listed-buildings',
-    fieldset: {
-      legend: {
-        html: 'Do you want to add any more listed buildings?',
-        classes: 'govuk-fieldset__legend--m',
-        isPageHeading: false
-      }
-    },
-    items: [
-      {
-        html: 'Yes',
-        value: 'Yes',
-        checked: checked('affected-listed-buildings','Yes')
-      },
-      {
-        html: 'No',
-        value: 'No',
-        checked: checked('affected-listed-buildings','No')
-      }
-    ]
-  }) }}
+  </form>
+
 {% endblock %}
