--- a/app/views/manage/questionnaire/index.html
+++ b/app/views/manage/questionnaire/index.html
@@ -25,8 +25,8 @@
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-        text: 'In progress'
+        classes: 'govuk-tag--green govuk-!-margin-left-2',
+        text: 'Ready for research'
       }) }}
     </h2>
 
@@ -49,7 +49,7 @@
       Version {{version}}
       {{ govukTag({
         classes: 'govuk-tag--green govuk-!-margin-left-2',
-        text: 'In progress'
+        text: 'Ready for research'
       }) }}
     </h2>
 
@@ -73,14 +73,14 @@
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-        text: 'In progress'
+        classes: 'govuk-tag--green govuk-!-margin-left-2',
+        text: 'Ready for research'
       }) }}
     </h2>
 
     <p class="govuk-!-margin-bottom-2">Changes:</p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>minor copy updates</li>
+      <li>minor content updates</li>
     </ul>
 
     {{ govukButton({
@@ -127,7 +127,7 @@
       items: [
         {
           heading: {
-            html: 'Version 10 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Researched</strong>'
+            html: 'Version 10 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-2">Researched</strong>'
           },
           content: {
             html: v10HTML
