--- a/app/views/manage/questionnaire/v13/constraints/affected-listed-building-details.html
+++ b/app/views/manage/questionnaire/v13/constraints/affected-listed-building-details.html
@@ -11,16 +11,16 @@
     </h1>
 
     <p class='govuk-body'>
-      Enter a Historic England list number for one of the buildings where the setting is affected.
+      Enter the Historic England list number for the affected listed building.
+    </p>
+
+    <p class='govuk-body'>
+      If more than one listed building is affected, you can add more list numbers later.
     </p>
 
     <p class='govuk-body'>
       A list entry number is 7 digits.
     </p>
-
-    <div id="listedplanning-hint" class="govuk-hint">
-      You can add more buildings later.
-    </div>
 
     {{ govukInput({
       label: {
