--- a/app/views/manage/questionnaire/v13/constraints/listed-building-check.html
+++ b/app/views/manage/questionnaire/v13/constraints/listed-building-check.html
@@ -1,6 +1,8 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Is the proposed development changing a listed building?' %}
+{% set title = 'Does the proposed development change a listed building?' %}
+
+{% set return = true %}
 
 {% block questions %}
   {{ govukRadios({
