--- a/app/views/manage/questionnaire/v13/constraints/affected-listed-buildings.html
+++ b/app/views/manage/questionnaire/v13/constraints/affected-listed-buildings.html
@@ -32,7 +32,7 @@
         {% endif %}
 
       </div>
-      <div class="govuk-grid-column-full">
+      <div class="govuk-grid-column-two-thirds">
 
         {{ govukSummaryList({
           classes: 'appeal-details govuk-!-margin-bottom-0 govuk-!-margin-top-0',
@@ -40,12 +40,12 @@
 
             {
               key: {
-                text: 'Listed building',
-                visuallyHiddenText: '155, York Road, Bedminster, Bristol, BS3 4AL'
+                visuallyHiddenText: 'Listed building ',
+                html: (data['historicenglandsearchnumber'] or '1282050')
+
               },
               value: {
-                html: (data['historicenglandsearchnumber'] or '1282050')+
-                      '<br>Grade II listed building'+
+                html: 'Grade II listed building'+
                       '<br>155, York Road, Bedminster, Bristol, BS3 4AL'
               },
               actions: {
@@ -60,12 +60,11 @@
             },
             {
               key: {
-                text: 'Listed building',
-                visuallyHiddenText: '155, York Road, Bedminster, Bristol, BS3 4AL'
+                visuallyHiddenText: 'Listed building ',
+                text: (data['historicenglandsearchnumber'] or '1282051')
               },
               value: {
-                html: (data['historicenglandsearchnumber'] or '1282051')+
-                      '<br>Grade II listed building'+
+                html: 'Grade II listed building'+
                       '<br>156, York Road, Bedminster, Bristol, BS3 4AL'
               },
               actions: {
