--- a/app/views/manage/questionnaire/v13/constraints/listed-building-details.html
+++ b/app/views/manage/questionnaire/v13/constraints/listed-building-details.html
@@ -12,15 +12,11 @@
     </h1>
 
     <p class='govuk-body'>
-      Enter the Historic England list number for the affected listed building.
+      Enter the Historic England list number for the listed building that will be changed by the proposed development.
     </p>
 
     <p class='govuk-body'>
-      If more than one listed building is affected, you can add more list numbers later.
-    </p>
-
-    <p class='govuk-body'>
-      A list entry number is 7 digits.
+      If more than one listed building is going to be changed, you can add more list numbers later.
     </p>
 
     {{ govukInput({
