--- a/app/views/manage/questionnaire-has/v1/task-list__po-report.html
+++ b/app/views/manage/questionnaire-has/v1/task-list__po-report.html
@@ -1,11 +1,8 @@
 <li>
   <h2 class="app-task-list__section">
-    <span class="app-task-list__section-number">5. </span>
-    {% if data['non-determination'] == 'true' %}
-      What your decision notice would have said and relevant policies
-    {% else %}
-      Planning officer’s report and relevant policies
-    {% endif %}
+    <span class="app-task-list__section-number">4. </span>
+
+      Planning officer’s report and supplementary documents
 
     {% if data['po-report-completed'] == 'true' %}
       {{ govukTag({
@@ -48,106 +45,6 @@
             if data['report-upload-complete'] else
             {
               href: 'po-report/report-upload',
-              html: 'Upload'
-            }
-          ]
-        }
-      },
-      {
-        key: {
-          html: 'Upload policies from statutory development plan'
-        },
-        value: {
-          html: data['policies-upload'] or 'policies.pdf'
-        }
-        if data['policies-upload-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'po-report/policies-upload?cya=true',
-              html: 'Change'
-            }
-            if data['policies-upload-complete'] else
-            {
-              href: 'po-report/policies-upload',
-              html: 'Upload'
-            }
-          ]
-        }
-      },
-      {
-        key: {
-          html: 'Emerging plan'
-        },
-        value: {
-          html: data['emerging-plan-check'] or 'No'
-        }
-        if data['emerging-plan-check-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'po-report/emerging-plan-check?cya=true',
-              html: 'Change'
-            }
-            if data['emerging-plan-check-complete'] else
-            {
-              href: 'po-report/emerging-plan-check',
-              html: 'Answer'
-            }
-          ]
-        }
-      },
-      {
-        key: {
-          html: 'Upload emerging plan and supporting information'
-        },
-        value: {
-          html: data['emerging-plan-upload'] or 'emerging-plan.pdf'
-        }
-        if data['emerging-plan-upload-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'po-report/emerging-plan-upload?cya=true',
-              html: 'Change'
-            }
-            if data['emerging-plan-upload-complete'] else
-            {
-              href: 'po-report/emerging-plan-upload',
-              html: 'Upload'
-            }
-          ]
-        }
-      } if data['emerging-plan-check'] == 'Yes',
-      {
-        key: {
-          html: 'Upload other relevant policies'
-        },
-        value: {
-          html: data['other-policies-upload'] or 'other-policies.pdf'
-        }
-        if data['other-policies-upload-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'po-report/other-policies-upload?cya=true',
-              html: 'Change'
-            }
-            if data['other-policies-upload-complete'] else
-            {
-              href: 'po-report/other-policies-upload',
               html: 'Upload'
             }
           ]
@@ -202,107 +99,7 @@
             }
           ]
         }
-      } if data['supplementary-check'] == 'Yes',
-      {
-        key: {
-          html: 'Community infrastructure levy'
-        },
-        value: {
-          html: data['community-infrastructure-check'] or 'No'
-        }
-        if data['community-infrastructure-check-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'po-report/community-infrastructure-check?cya=true',
-              html: 'Change'
-            }
-            if data['community-infrastructure-check-complete'] else
-            {
-              href: 'po-report/community-infrastructure-check',
-              html: 'Answer'
-            }
-          ]
-        }
-      },
-      {
-        key: {
-          html: 'Upload community infrastructure levy'
-        },
-        value: {
-          html: data['community-infrastructure-upload'] or 'community-infrastructure.pdf'
-        }
-        if data['community-infrastructure-upload-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'po-report/community-infrastructure-upload?cya=true',
-              html: 'Change'
-            }
-            if data['community-infrastructure-upload-complete'] else
-            {
-              href: 'po-report/community-infrastructure-upload',
-              html: 'Upload'
-            }
-          ]
-        }
-      } if data['community-infrastructure-check'] == 'Yes',
-      {
-        key: {
-          html: 'Community infrastructure levy formally adopted'
-        },
-        value: {
-          html: data['community-infrastructure-adopted'] or 'No'
-        }
-        if data['community-infrastructure-adopted-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'po-report/community-infrastructure-adopted?cya=true',
-              html: 'Change'
-            }
-            if data['community-infrastructure-adopted-complete'] else
-            {
-              href: 'po-report/community-infrastructure-adopted',
-              html: 'Upload'
-            }
-          ]
-        }
-      } if data['community-infrastructure-check'] == 'Yes',
-      {
-        key: {
-          html: 'Date community infrastructure levy '+('expected to be ' if data['community-infrastructure-adopted'] != 'Yes')+'adopted'
-        },
-        value: {
-          html: levyDate
-        }
-        if data['community-infrastructure-date-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'po-report/community-infrastructure-date?cya=true',
-              html: 'Change'
-            }
-            if data['community-infrastructure-date-complete'] else
-            {
-              href: 'po-report/community-infrastructure-date',
-              html: 'Upload'
-            }
-          ]
-        }
-      } if data['community-infrastructure-check'] == 'Yes'
+      } if data['supplementary-check'] == 'Yes'
     ]
   }) }}
 </li>
