LPAQ HAS updates

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -108,6 +108,9 @@
           <a href="manage/questionnaire/">S78 questionnaire</a>
         </li>
         <li>
+          <a href="manage/questionnaire-has/">Householder questionnaire</a>
+        </li>
+        <li>
           <a href="manage/statement/">Appeal statement</a>
         </li>
         <li>
