--- a/app/views/manage/questionnaire-has/v1/task-list__appeal-process.html
+++ b/app/views/manage/questionnaire-has/v1/task-list__appeal-process.html
@@ -72,7 +72,7 @@
       },
       {
         key: {
-          html: 'Extra conditions'
+          html: 'Suggested conditions'
         },
         value: {
           html: (data['extra-conditions-check'] or 'No')+('<br>Conditions:'+data['extra-conditions'] if data['extra-conditions-check'] == 'Yes')
