--- a/app/views/manage/statement/v1/started-refusal.html
+++ b/app/views/manage/statement/v1/started-refusal.html
@@ -62,7 +62,7 @@
     <p class="govuk-body">
       Thank you,<br>
       The Planning Inspectorate<br>
-      CaseOfficers@PlanningInspectorate.gov.uk
+      caseofficers@PlanningInspectorate.gov.uk
     </p>
 
   </div>
