--- a/app/views/manage/questionnaire-has/v1/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire-has/v1/appeal-process/extra-conditions.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Extra conditions' %}
+{% set title = 'Suggested conditions' %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
@@ -8,7 +8,7 @@
   </h1>
   <p class="govuk-body">You need to tell us about any extra conditions you want the inspector to apply if they allow the appeal.</p>
 
-  <p class="govuk-body">If you choose to not tell us about them now, you must email <a href=:mailto:CaseOfficers@planninginspectorate.gov.uk">CaseOfficers@planninginspectorate.gov.uk</a> by {{ '6' | daysInFuture }}.</p>
+  <p class="govuk-body">If you choose to not tell us about them now, you must email <a href=:mailto:caseofficers@planninginspectorate.gov.uk">caseofficers@planninginspectorate.gov.uk</a> by {{ '6' | daysInFuture }}.</p>
 
   <p class="govuk-body">You do not need to tell us about standard conditions.</p>
 
@@ -31,7 +31,7 @@
       value: data['extra-conditions'],
       rows: '3',
       label: {
-        html: 'What are your extra conditions?'
+        html: 'What are your suggested conditions?'
       }
     }) }}
   {% endset -%}
@@ -40,7 +40,7 @@
     name: 'extra-conditions-check',
     fieldset: {
       legend: {
-        html: 'Do you want to tell us about any extra conditions?',
+        html: 'Do you want to tell us about any suggested conditions?',
         classes: 'govuk-fieldset__legend--m'
       }
     },
