--- a/app/views/manage/questionnaire/v10/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire/v10/appeal-process/extra-conditions.html
@@ -10,7 +10,7 @@
 
   <p class="govuk-body">If you choose to not tell us about them now, you have until{{ '6' | daysInFuture }} to do so.</p>
 
-  <p class="govuk-body">To submit extra conditions after the questionnaire, email <a href=:mailto:CaseOfficers@planninginspectorate.gov.uk">CaseOfficers@planninginspectorate.gov.uk</a>.</p>
+  <p class="govuk-body">To submit extra conditions after the questionnaire, email <a href=:mailto:caseofficers@planninginspectorate.gov.uk">caseofficers@planninginspectorate.gov.uk</a>.</p>
 
   <p class="govuk-body">You do not need to tell us about standard conditions.</p>
 
