--- a/app/views/manage/questionnaire/v12/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire/v12/appeal-process/extra-conditions.html
@@ -8,7 +8,7 @@
   </h1>
   <p class="govuk-body">You need to tell us about any extra conditions you want the inspector to apply if they allow the appeal.</p>
 
-  <p class="govuk-body">If you choose to not tell us about them now, you must email <a href=:mailto:CaseOfficers@planninginspectorate.gov.uk">CaseOfficers@planninginspectorate.gov.uk</a> by {{ '6' | daysInFuture }}.</p>
+  <p class="govuk-body">If you choose to not tell us about them now, you must email <a href=:mailto:caseofficers@planninginspectorate.gov.uk">caseofficers@planninginspectorate.gov.uk</a> by {{ '6' | daysInFuture }}.</p>
 
   <p class="govuk-body">You do not need to tell us about standard conditions.</p>
 
