--- a/app/views/manage/questionnaire/v13/appeal-process/statement-of-case.html
+++ b/app/views/manage/questionnaire/v13/appeal-process/statement-of-case.html
@@ -8,7 +8,7 @@
   </h1>
   <p class="govuk-body">The deadline to submit a statement of case is {{ '6' | daysInFuture }}.</p>
 
-  <p class="govuk-body">To submit your statement, email <a href=:mailto:CaseOfficers@planninginspectorate.gov.uk">CaseOfficers@planninginspectorate.gov.uk</a>.</p>
+  <p class="govuk-body">To submit your statement, email <a href=:mailto:caseofficers@planninginspectorate.gov.uk">caseofficers@planninginspectorate.gov.uk</a>.</p>
 
   {{ govukRadios({
     idPrefix: 'statement-of-case',
