HAS LPAQ Inspectors visiting neighbours

--- a/app/views/manage/questionnaire-has/v1/site-access/neighbours-land.html
+++ b/app/views/manage/questionnaire-has/v1/site-access/neighbours-land.html
@@ -1,6 +1,8 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Would the Inspector need access to a neighbour’s land?' %}
+{% set title = 'Would the Inspector need access to a neighbour’s land or property?' %}
+
+<!-- Will the reasons for refusal / grounds of appeal require the Inspector to access a neighbour’s land? -->
 
 {% block questions %}
   {{ govukRadios({
